# test_parser_wb

./: README.md  basket_finder.py  basket_map.json  full_catalog.xlsx  parser.py  pyproject.toml  russia_top_selection.xlsx
