[project]
name = "testovoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiohttp-socks>=0.11.0",
    "bs4>=0.0.2",
    "curl-cffi>=0.14.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "tenacity>=9.1.4",
]
